RESOLVED FIXED193865
[LFC][BFC] Ignore last inflow child's collapsed through margin after when computing containing block's height.
https://bugs.webkit.org/show_bug.cgi?id=193865
Summary [LFC][BFC] Ignore last inflow child's collapsed through margin after when com...
alan
Reported 2019-01-26 05:41:35 PST
The (collapsed through) margin is already taken into account while positioning the child.
Attachments
Patch (8.20 KB, patch)
2019-01-26 06:02 PST, alan
koivisto: review+
alan
Comment 1 2019-01-26 06:02:38 PST
alan
Comment 2 2019-01-26 07:01:40 PST
Radar WebKit Bug Importer
Comment 3 2019-01-26 07:02:36 PST
Note You need to log in before you can comment on or make changes to this bug.